--- a/PromoValidator/htmlVersion/PromoValidator.html
+++ b/PromoValidator/htmlVersion/PromoValidator.html
@@ -4,9 +4,6 @@
 	- make html pretty
 	- add input field
 	- add ability to select country
-	- add instructions
-	- add tips
-	- add key
 -->
 
 <html>
@@ -132,6 +129,31 @@
 				});
 			});
 		</script>
+		<h1>Instructions</h1>
+		<ol>
+			<li>Prepare an Excel with two columns (Lazada Sku and expected price)</li>
+			<li>Copy/paste values into the form</li>
+			<li>Select country</li>
+			<li>Click "Validate prices"</li>
+		</ol>
+		<h1>Tips</h1>
+		<ul>
+			<li>Make sure your computer is plugged in and not running on battery (to make the program run faster)</li>
+			<li>Don't try to validate more than 200 skus at once</li>
+		</ul>
+		<h1>Legend</h1>
+		<table>
+			<tr>
+				<td class="notFound">Product not found</td>
+			</tr>
+			<tr>
+				<td class="tooCheap">Price lower than expected</td>
+			</tr>
+			<tr>
+				<td class="tooExpensive">Price higher than expensive or product out of stock</td>
+			</tr>
+		</table>
+		<h1>Results</h1>
 		<table id="results">
 			<tr>
 				<th>Sku</th>
