[PromoValidator] Add button to explicitly clear results and restart

--- a/PromoValidator/htmlVersion/PromoValidator.html
+++ b/PromoValidator/htmlVersion/PromoValidator.html
@@ -10,9 +10,13 @@ Version history:
 -->
 <html>
 	<head>
-		<title>Promo validator v2.1</title>
+		<title>Promo validator v2.2</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<style>
+			body {
+				padding: 10px;
+			}
+			
 			table {
 				table-layout:fixed;
 			}
@@ -20,6 +24,7 @@ Version history:
 			td {
 				width:1px;
 				white-space:nowrap;
+				padding: 5px;
 			}
 			
 			.outOfStock, .tooExpensive {
@@ -156,13 +161,18 @@ Version history:
 					});
 				});
 			}
+			
+			function resetContent() {
+				$("#results").find("tr").slice(1).remove();
+				$("#input").val("");
+			}
 		</script>
 		<h1>Instructions</h1>
 		<ol>
 			<li>Copy/paste Lazada sku and promo price in two columns in an Excel file</li>
 			<li>Copy/paste those values into the form below</li>
 			<li>Select country</li>
-			<li>Click "Validate prices" (takes roughly 2 minutes per 100 skus, but you can work on other things while waiting)</li>
+			<li>Click "Validate prices" (takes roughly 2 minutes / 100 skus, but you can work on other things at the same time)</li>
 		</ol>
 		
 		<h1>Tips</h1>
@@ -201,6 +211,7 @@ Version history:
 		<br />
 		<br />
 		<button type="button" onclick="validatePrices()">Validate prices</button>
+		<button type="button" onclick="resetContent()">Clear</button>
 		
 		<h1>Results</h1>
 		<table id="results">
