[PromoValidator] Marking v.2.3 as released

--- a/PromoValidator/htmlVersion/PromoValidator.html
+++ b/PromoValidator/htmlVersion/PromoValidator.html
@@ -1,6 +1,6 @@
 <!--
 Version history:
-	v2.3 -> Update to work with new Lazada site and add additional styling and favicon (unreleased version)
+	v2.3 -> Update to work with new Lazada site and add additional styling and favicon
 	v2.2 -> Add ability to run a new set of skus
 	v2.1 -> Fix bug when price contains commas
 	v2.0 -> Re-write in HTML, add out of stock, and product name
