[UIExercise] Add h1/h2 and searchbox

--- a/UIExercise/index.html
+++ b/UIExercise/index.html
@@ -11,15 +11,19 @@
     <title>UI Exercise Starter Kits</title>
   </head>
   <body>
-    <!-- Commented this block before you start to code -->
-    <div class="intro-box">
-      <h1 class="intro-h1">Welcome to UI exercise start kits</h1>
-      <p class="intro-p">Please feel free to land on this confluence page for the exercise tasks :</p> 
-      <p class="intro-p"><a href="https://confluence.agoda.local/display/FrontEnd/UI+Exercise" target="_blank">UI Exercise</a></p>
+    <div class="exercise_1">
+        <header class="search_box">
+            <div class="search_box__content">
+                <h1 class="search_box__title">Welcome to Agoda</h1>
+                <h2 class="search_box__description">The effortless engine for Hotels and Accommodations</h2>
+                <span class="search_box__input_wrapper">
+                <i class="fas fa-search search_box__search_icon" ></i>
+                <input type="text" title="" class="search_box__input" />
+            </span>
+                <button class="search_box__search">Search</button>
+                <div class="search_box__trending_searches">Trending search: Tokyo, Hong Kong, New York</div>
+            </div>
+        </header>
     </div>
-    <!--start your code here -->
-
-
-    <!--end your code here -->
   </body>
 </html>
