[UIExercise] Add basic two column layout

--- a/UIExercise/index.html
+++ b/UIExercise/index.html
@@ -12,18 +12,33 @@
   </head>
   <body>
     <div class="exercise_1">
-        <header class="search_box">
-            <div class="search_box__content">
-                <h1 class="search_box__title">Welcome to Agoda</h1>
-                <h2 class="search_box__description">The effortless engine for Hotels and Accommodations</h2>
-                <span class="search_box__input_wrapper">
+        <nav class="nav_menu">
+            <div class="nav_menu__name">Creative Tim</div>
+            <ul class="nav_menu__items">
+                <li class="nav_menu__item nav_menu__item--selected"><i class="fas fa-th-large"></i>Dashboard</li>
+                <li class="nav_menu__item"><i class="fas fa-user"></i>User Profile</li>
+                <li class="nav_menu__item"><i class="far fa-clipboard"></i>Table List</li>
+                <li class="nav_menu__item"><i class="fas fa-sticky-note"></i>Typography</li>
+                <li class="nav_menu__item"><i class="fas fa-circle"></i>Icons</li>
+                <li class="nav_menu__item"><i class="fas fa-map-marker-alt"></i>Maps</li>
+                <li class="nav_menu__item"><i class="fas fa-bell"></i>Notifications</li>
+                <li class="nav_menu__item nav_menu__item--bottom"><i class="fas fa-arrow-circle-up"></i>Upgrade to PRO</li>
+            </ul>
+        </nav>
+        <div class="content">
+            <header class="search_box">
+                <div class="search_box__content">
+                    <h1 class="search_box__title">Welcome to Agoda</h1>
+                    <h2 class="search_box__description">The effortless engine for Hotels and Accommodations</h2>
+                    <span class="search_box__input_wrapper">
                 <i class="fas fa-search search_box__search_icon" ></i>
                 <input type="text" title="" class="search_box__input" />
             </span>
-                <button class="search_box__search">Search</button>
-                <div class="search_box__trending_searches">Trending search: Tokyo, Hong Kong, New York</div>
-            </div>
-        </header>
+                    <button class="search_box__search">Search</button>
+                    <div class="search_box__trending_searches">Trending search: Tokyo, Hong Kong, New York</div>
+                </div>
+            </header>
+        </div>
     </div>
   </body>
 </html>
