--- a/UIExercise/index.html
+++ b/UIExercise/index.html
@@ -13,17 +13,20 @@
   <body>
     <div class="exercise_1">
         <nav class="nav_menu">
-            <div class="nav_menu__name">Creative Tim</div>
-            <ul class="nav_menu__items">
-                <li class="nav_menu__item nav_menu__item--selected"><i class="fas fa-th-large"></i>Dashboard</li>
-                <li class="nav_menu__item"><i class="fas fa-user"></i>User Profile</li>
-                <li class="nav_menu__item"><i class="far fa-clipboard"></i>Table List</li>
-                <li class="nav_menu__item"><i class="fas fa-sticky-note"></i>Typography</li>
-                <li class="nav_menu__item"><i class="fas fa-circle"></i>Icons</li>
-                <li class="nav_menu__item"><i class="fas fa-map-marker-alt"></i>Maps</li>
-                <li class="nav_menu__item"><i class="fas fa-bell"></i>Notifications</li>
-                <li class="nav_menu__item nav_menu__item--bottom"><i class="fas fa-arrow-circle-up"></i>Upgrade to PRO</li>
-            </ul>
+            <img src="./assets/bg.png" class="nav_menu__background" />
+            <div class="nav_menu__content">
+                <div class="nav_menu__name">Creative Tim</div>
+                <ul class="nav_menu__items">
+                    <li class="nav_menu__item nav_menu__item--selected"><i class="fas fa-th-large"></i>Dashboard</li>
+                    <li class="nav_menu__item"><i class="fas fa-user"></i>User Profile</li>
+                    <li class="nav_menu__item"><i class="far fa-clipboard"></i>Table List</li>
+                    <li class="nav_menu__item"><i class="fas fa-sticky-note"></i>Typography</li>
+                    <li class="nav_menu__item"><i class="fas fa-circle"></i>Icons</li>
+                    <li class="nav_menu__item"><i class="fas fa-map-marker-alt"></i>Maps</li>
+                    <li class="nav_menu__item"><i class="fas fa-bell"></i>Notifications</li>
+                    <li class="nav_menu__item nav_menu__item--bottom"><i class="fas fa-arrow-circle-up"></i>Upgrade to PRO</li>
+                </ul>
+            </div>
         </nav>
         <div class="content">
             <header class="search_box">
