[UIExercise] Add nav support for phone

--- a/UIExercise/index.html
+++ b/UIExercise/index.html
@@ -17,14 +17,38 @@
             <div class="nav_menu__content">
                 <div class="nav_menu__name">Creative Tim</div>
                 <ul class="nav_menu__items">
-                    <li class="nav_menu__item nav_menu__item--selected"><i class="fas fa-th-large"></i>Dashboard</li>
-                    <li class="nav_menu__item"><i class="fas fa-user"></i>User Profile</li>
-                    <li class="nav_menu__item"><i class="far fa-clipboard"></i>Table List</li>
-                    <li class="nav_menu__item"><i class="fas fa-sticky-note"></i>Typography</li>
-                    <li class="nav_menu__item"><i class="fas fa-circle"></i>Icons</li>
-                    <li class="nav_menu__item"><i class="fas fa-map-marker-alt"></i>Maps</li>
-                    <li class="nav_menu__item"><i class="fas fa-bell"></i>Notifications</li>
-                    <li class="nav_menu__item nav_menu__item--bottom"><i class="fas fa-arrow-circle-up"></i>Upgrade to PRO</li>
+                    <li class="nav_menu__item nav_menu__item--selected">
+                        <i class="fas fa-th-large"></i>
+                        <span class="nav_menu__item_text">Dashboard</span>
+                    </li>
+                    <li class="nav_menu__item">
+                        <i class="fas fa-user"></i>
+                        <span class="nav_menu__item_text">User Profile</span>
+                        </li>
+                    <li class="nav_menu__item">
+                        <i class="far fa-clipboard"></i>
+                        <span class="nav_menu__item_text">Table List</span>
+                    </li>
+                    <li class="nav_menu__item">
+                        <i class="fas fa-sticky-note"></i>
+                        <span class="nav_menu__item_text">Typography</span>
+                    </li>
+                    <li class="nav_menu__item">
+                        <i class="fas fa-circle"></i>
+                        <span class="nav_menu__item_text">Icons</span>
+                    </li>
+                    <li class="nav_menu__item">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <span class="nav_menu__item_text">Maps</span>
+                    </li>
+                    <li class="nav_menu__item">
+                        <i class="fas fa-bell"></i>
+                        <span class="nav_menu__item_text">Notifications</span>
+                    </li>
+                    <li class="nav_menu__item nav_menu__item--bottom">
+                        <i class="fas fa-arrow-circle-up"></i>
+                        <span class="nav_menu__item_text">Upgrade to PRO</span>
+                    </li>
                 </ul>
             </div>
         </nav>
