[UIExercise] Style user card

--- a/UIExercise/index.html
+++ b/UIExercise/index.html
@@ -52,7 +52,7 @@
                 </ul>
             </div>
         </nav>
-        <div class="content">
+        <div class="main_content">
             <header class="search_box">
                 <div class="search_box__content">
                     <h1 class="search_box__title">Welcome to Agoda</h1>
@@ -65,6 +65,21 @@
                     <div class="search_box__trending_searches">Trending search: Tokyo, Hong Kong, New York</div>
                 </div>
             </header>
+            <section class="user_card_container">
+                <div class="user_card">
+                    <div class="user_card__main_content">
+                        <span class="user_card__heading">Public</span>
+                        <div class="user_card__photo"></div>
+                        <div class="user_card__line1">Kiev, Ukraine</div>
+                        <div class="user_card__line2">Ilya Dmitruk</div>
+                        <div class="user_card__line3">I'm <b>#founder</b> and <b>#designer</b> at cardsaround. Connect me for <b>#investment #productdesign</b></div>
+                    </div>
+                    <div class="user_card__actions">
+                        <span class="user_card__action">Call</span>
+                        <span class="user_card__action">Linked In</span>
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
   </body>
