[UIExercise] Add remaining users

--- a/UIExercise/index.html
+++ b/UIExercise/index.html
@@ -79,6 +79,32 @@
                         <span class="user_card__action">Linked In</span>
                     </div>
                 </div>
+                <div class="user_card">
+                    <div class="user_card__main_content">
+                        <span class="user_card__heading">Public</span>
+                        <div class="user_card__photo"></div>
+                        <div class="user_card__line1">Henry's Video Games</div>
+                        <div class="user_card__line2">Michael Rodriguez</div>
+                        <div class="user_card__line3"><b>#executivevicepresident</b> Devices & Services <b>#henryvideogames.</b> Ice cream lover.</div>
+                    </div>
+                    <div class="user_card__actions">
+                        <span class="user_card__action">Call</span>
+                        <span class="user_card__action">Linked In</span>
+                    </div>
+                </div>
+                <div class="user_card">
+                    <div class="user_card__main_content">
+                        <span class="user_card__heading">Personal</span>
+                        <div class="user_card__photo"></div>
+                        <div class="user_card__line1">Google Inc.</div>
+                        <div class="user_card__line2">Jakov Green</div>
+                        <div class="user_card__line3">#Objective-C # Java #cocoa #c++ #developer</div>
+                    </div>
+                    <div class="user_card__actions">
+                        <span class="user_card__action">Call</span>
+                        <span class="user_card__action">Linked In</span>
+                    </div>
+                </div>
             </section>
         </div>
     </div>
