[UIExercise] Add colors for first user card

--- a/UIExercise/index.html
+++ b/UIExercise/index.html
@@ -66,7 +66,7 @@
                 </div>
             </header>
             <section class="user_card_container">
-                <div class="user_card">
+                <div class="user_card user_card--lightgray">
                     <div class="user_card__main_content">
                         <span class="user_card__heading">Public</span>
                         <div class="user_card__photo"></div>
