--- a/UIExercise/index.html
+++ b/UIExercise/index.html
@@ -79,7 +79,7 @@
                         <span class="user_card__action">Linked In</span>
                     </div>
                 </div>
-                <div class="user_card">
+                <div class="user_card user_card--yellow">
                     <div class="user_card__main_content">
                         <span class="user_card__heading">Public</span>
                         <div class="user_card__photo"></div>
