[UIExercise] Add styling for black user card

--- a/UIExercise/index.html
+++ b/UIExercise/index.html
@@ -92,7 +92,7 @@
                         <span class="user_card__action">Linked In</span>
                     </div>
                 </div>
-                <div class="user_card">
+                <div class="user_card user_card--black">
                     <div class="user_card__main_content">
                         <span class="user_card__heading">Personal</span>
                         <div class="user_card__photo"></div>
