[UIExercise] Add become a host button

--- a/UIExercise/index.html
+++ b/UIExercise/index.html
@@ -65,6 +65,13 @@
                     <div class="search_box__trending_searches">Trending search: Tokyo, Hong Kong, New York</div>
                 </div>
             </header>
+            <div class="become_a_host">
+                <img src="./assets/nha-homes.png" class="become_a_host__image" />
+                <span class="become_a_host__content">
+                    Become a Host
+                    <i class="fas fa-angle-right"></i>
+                </span>
+            </div>
             <section class="user_card_container">
                 <div class="user_card user_card--lightgray">
                     <div class="user_card__main_content">
