[UIExercise] Add exercise 2 scaffolding

--- a/UIExercise/index.html
+++ b/UIExercise/index.html
@@ -24,7 +24,7 @@
                     <li class="nav_menu__item">
                         <i class="fas fa-user"></i>
                         <span class="nav_menu__item_text">User Profile</span>
-                        </li>
+                    </li>
                     <li class="nav_menu__item">
                         <i class="far fa-clipboard"></i>
                         <span class="nav_menu__item_text">Table List</span>
@@ -113,6 +113,70 @@
                     </div>
                 </div>
             </section>
+        </div>
+    </div>
+    <div class="exercise_2">
+        <nav class="nav_menu">
+            <img src="./assets/bg.png" class="nav_menu__background" />
+            <div class="nav_menu__content">
+                <div class="nav_menu__name">Creative Tim</div>
+                <ul class="nav_menu__items">
+                    <li class="nav_menu__item nav_menu__item--selected">
+                        <i class="fas fa-th-large"></i>
+                        <span class="nav_menu__item_text">Dashboard</span>
+                    </li>
+                    <li class="nav_menu__item">
+                        <i class="fas fa-user"></i>
+                        <span class="nav_menu__item_text">User Profile</span>
+                    </li>
+                    <li class="nav_menu__item">
+                        <i class="far fa-clipboard"></i>
+                        <span class="nav_menu__item_text">Table List</span>
+                    </li>
+                    <li class="nav_menu__item">
+                        <i class="fas fa-sticky-note"></i>
+                        <span class="nav_menu__item_text">Typography</span>
+                    </li>
+                    <li class="nav_menu__item">
+                        <i class="fas fa-circle"></i>
+                        <span class="nav_menu__item_text">Icons</span>
+                    </li>
+                    <li class="nav_menu__item">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <span class="nav_menu__item_text">Maps</span>
+                    </li>
+                    <li class="nav_menu__item">
+                        <i class="fas fa-bell"></i>
+                        <span class="nav_menu__item_text">Notifications</span>
+                    </li>
+                    <li class="nav_menu__item nav_menu__item--bottom">
+                        <i class="fas fa-arrow-circle-up"></i>
+                        <span class="nav_menu__item_text">Upgrade to PRO</span>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="main_content">
+            <header class="search_box">
+                <div class="search_box__content">
+                    <h1 class="search_box__title">Welcome to Agoda</h1>
+                    <h2 class="search_box__description">The effortless engine for Hotels and Accommodations</h2>
+                    <span class="search_box__input_wrapper">
+                <i class="fas fa-search search_box__search_icon" ></i>
+                <input type="text" title="" class="search_box__input" />
+            </span>
+                    <button class="search_box__search">Search</button>
+                    <div class="search_box__trending_searches">Trending search: Tokyo, Hong Kong, New York</div>
+                </div>
+            </header>
+            <div class="become_a_host">
+                <img src="./assets/nha-homes.png" class="become_a_host__image" />
+                <span class="become_a_host__content">
+                    Become a Host
+                    <i class="fas fa-angle-right"></i>
+                </span>
+            </div>
+            TODO rkeim
         </div>
     </div>
   </body>
