[UIExercise] Add basic styling for image card

--- a/UIExercise/index.html
+++ b/UIExercise/index.html
@@ -156,7 +156,7 @@
                 </ul>
             </div>
         </nav>
-        <div class="main_content">
+        <div class="main_content main_content--lightgray">
             <header class="search_box">
                 <div class="search_box__content">
                     <h1 class="search_box__title">Welcome to Agoda</h1>
@@ -176,7 +176,14 @@
                     <i class="fas fa-angle-right"></i>
                 </span>
             </div>
-            TODO rkeim
+            <section class="small_image_cards">
+                <div class="image_card">
+                    <div class="image_card__image"><i class="far fa-square"></i></div>
+                    <div class="image_card__title">Used Space</div>
+                    <div class="image_card__description">49/50GB</div>
+                    <div class="image_card__details"><i class="fas fa-exclamation-triangle"></i>Get More Space...</div>
+                </div>
+            </section>
         </div>
     </div>
   </body>
