[UIExercise] Add remaining small image cards

--- a/UIExercise/index.html
+++ b/UIExercise/index.html
@@ -178,10 +178,28 @@
             </div>
             <section class="small_image_cards">
                 <div class="image_card">
-                    <div class="image_card__image"><i class="far fa-square"></i></div>
+                    <div class="image_card__image image_card__image--orange"><i class="far fa-square"></i></div>
                     <div class="image_card__title">Used Space</div>
                     <div class="image_card__description">49/50GB</div>
                     <div class="image_card__details"><i class="fas fa-exclamation-triangle"></i>Get More Space...</div>
+                </div>
+                <div class="image_card">
+                    <div class="image_card__image image_card__image--green"><i class="fas fa-home"></i></div>
+                    <div class="image_card__title">Revenue</div>
+                    <div class="image_card__description">$34,245</div>
+                    <div class="image_card__details"><i class="far fa-calendar"></i>Last 24 Hours</div>
+                </div>
+                <div class="image_card">
+                    <div class="image_card__image image_card__image--red"><i class="fas fa-info-circle"></i></div>
+                    <div class="image_card__title image_card__title--short">Fixed Issues</div>
+                    <div class="image_card__description">75</div>
+                    <div class="image_card__details"><i class="fas fa-tag"></i>Tracked from Github</div>
+                </div>
+                <div class="image_card">
+                    <div class="image_card__image image_card__image--blue"><i class="fab fa-twitter"></i></div>
+                    <div class="image_card__title image_card__title--short">Fixed Issues</div>
+                    <div class="image_card__description">75</div>
+                    <div class="image_card__details"><i class="fas fa-history"></i>Just updated</div>
                 </div>
             </section>
         </div>
