[UIExercise] Add finishing touches to small image cards

--- a/UIExercise/index.html
+++ b/UIExercise/index.html
@@ -180,8 +180,8 @@
                 <div class="image_card">
                     <div class="image_card__image image_card__image--orange"><i class="far fa-square"></i></div>
                     <div class="image_card__title">Used Space</div>
-                    <div class="image_card__description">49/50GB</div>
-                    <div class="image_card__details"><i class="fas fa-exclamation-triangle"></i>Get More Space...</div>
+                    <div class="image_card__description">49/50<span class="image_card__description--small">GB</span></div>
+                    <div class="image_card__details image_card__details--warning"><i class="fas fa-exclamation-triangle"></i>Get More Space...</div>
                 </div>
                 <div class="image_card">
                     <div class="image_card__image image_card__image--green"><i class="fas fa-home"></i></div>
