[UIExercise] Add large image cards

--- a/UIExercise/index.html
+++ b/UIExercise/index.html
@@ -202,6 +202,26 @@
                     <div class="image_card__details"><i class="fas fa-history"></i>Just updated</div>
                 </div>
             </section>
+            <section class="large_image_cards">
+                <div class="image_card image_card--large">
+                    <div class="image_card__image"><img src="./assets/hotel.png" /></div>
+                    <div class="image_card__title">Daily Sales</div>
+                    <div class="image_card__description">55% increase in today sales.</div>
+                    <div class="image_card__details"><i class="far fa-clock"></i>updated 4 minutes ago</div>
+                </div>
+                <div class="image_card image_card--large">
+                    <div class="image_card__image"><img src="./assets/hotel.png" /></div>
+                    <div class="image_card__title">Email Subscriptions</div>
+                    <div class="image_card__description">Last Campaign Performance</div>
+                    <div class="image_card__details"><i class="far fa-clock"></i>campaign sent 2 days ago</div>
+                </div>
+                <div class="image_card image_card--large">
+                    <div class="image_card__image"><img src="./assets/hotel.png" /></div>
+                    <div class="image_card__title">Completed Tasks</div>
+                    <div class="image_card__description">Last Campaign Performance</div>
+                    <div class="image_card__details"><i class="far fa-clock"></i>campaign sent 2 days ago</div>
+                </div>
+            </section>
         </div>
     </div>
   </body>
